--- a/app/src/main/res/layout/vcash_header_layout.xml
+++ b/app/src/main/res/layout/vcash_header_layout.xml
@@ -70,6 +70,7 @@
                             android:layout_marginTop="@dimen/_5sdp"
                             android:layout_width="@dimen/_100sdp"
                             android:layout_height="@dimen/_20sdp"
+                            android:visibility="gone"
                             android:background="@drawable/buttonbg">
 
                             <com.vynkpay.custom.NormalTextView
