--- a/app/src/main/res/layout/activity_payment_method_mcash.xml
+++ b/app/src/main/res/layout/activity_payment_method_mcash.xml
@@ -45,11 +45,8 @@
                             android:textColor="@color/black"
                             android:gravity="center_vertical|right"
                             android:textSize="@dimen/_14sdp"
-                            android:text="@string/rs"
                             android:id="@+id/tvAmontBal"
                             android:layout_weight="0.4"/>
-
-
 
                     </LinearLayout>
 
@@ -71,12 +68,13 @@
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14sdp"
                         android:layout_marginBottom="@dimen/_16sdp"
-                        android:text="@string/dummyShortText"/>
+                        android:text="@string/selectPaymentModes"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/_60sdp"
                         android:id="@+id/linIndian"
+                        android:visibility="gone"
                         android:background="@drawable/custom_rectangle"
                         android:layout_marginLeft="@dimen/_16sdp"
                         android:layout_marginRight="@dimen/_16sdp"
@@ -125,117 +123,115 @@
 
                     </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_16sdp"
-                    android:layout_marginRight="@dimen/_16sdp"
-                    android:visibility="gone"
-                    android:background="@drawable/custom_rectangle"
-                    android:id="@+id/linInternationl"
-                    android:orientation="vertical">
-
-
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/_60sdp"
-                        android:orientation="horizontal"
-                        android:weightSum="1">
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/_16sdp"
+                        android:layout_marginRight="@dimen/_16sdp"
+                        android:background="@drawable/custom_rectangle"
+                        android:id="@+id/linInternationl"
+                        android:orientation="vertical">
+
                         <LinearLayout
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="0.6"
-                            android:orientation="horizontal">
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/_60sdp"
+                            android:orientation="horizontal"
+                            android:id="@+id/lineCoinBase"
+                            android:visibility="gone"
+                            android:weightSum="1">
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.6"
+                                android:orientation="horizontal">
 
-                            <ToggleButton
-                                android:layout_width="24dp"
-                                android:layout_height="24dp"
-                                android:buttonTint="@color/colorPrimary"
-                                android:textOff=" "
-                                android:textOn=" "
-                                android:id="@+id/btnCoinbase"
-                                android:background="@drawable/toggle_selector"
-                                android:layout_gravity="center_vertical" />
+                                <ToggleButton
+                                    android:layout_width="24dp"
+                                    android:layout_height="24dp"
+                                    android:buttonTint="@color/colorPrimary"
+                                    android:textOff=" "
+                                    android:textOn=" "
+                                    android:id="@+id/btnCoinbase"
+                                    android:background="@drawable/toggle_selector"
+                                    android:layout_gravity="center_vertical" />
 
-                            <com.vynkpay.custom.NormalTextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textSize="@dimen/_15sdp"
-                                android:textColor="@color/black"
-                                android:paddingLeft="@dimen/_10sdp"
-                                android:layout_gravity="center_vertical"
-                                android:text="Coinbase"/>
+                                <com.vynkpay.custom.NormalTextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textSize="@dimen/_15sdp"
+                                    android:textColor="@color/black"
+                                    android:paddingLeft="@dimen/_10sdp"
+                                    android:layout_gravity="center_vertical"
+                                    android:text="Coinbase"/>
 
+
+                            </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.4"
+                                android:gravity="right">
+
+                                <ImageView
+                                    android:layout_width="@dimen/_40sdp"
+                                    android:layout_height="@dimen/_40sdp"
+                                    android:layout_gravity="center_vertical"
+                                    android:layout_marginRight="@dimen/_16sdp"
+                                    android:src="@drawable/coinbase"/>
+                            </LinearLayout>
 
                         </LinearLayout>
+
+
                         <LinearLayout
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="0.4"
-                            android:gravity="right">
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/_60sdp"
+                            android:orientation="horizontal"
+                            android:visibility="gone"
+                            android:id="@+id/linPayeer"
+                            android:weightSum="1">
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.6"
+                                android:orientation="horizontal">
 
-                            <ImageView
-                                android:layout_width="@dimen/_40sdp"
-                                android:layout_height="@dimen/_40sdp"
-                                android:layout_gravity="center_vertical"
-                                android:layout_marginRight="@dimen/_16sdp"
-                                android:src="@drawable/coinbase"/>
-                        </LinearLayout>
+                                <ToggleButton
+                                    android:layout_width="24dp"
+                                    android:layout_height="24dp"
+                                    android:buttonTint="@color/colorPrimary"
+                                    android:textOff=" "
+                                    android:textOn=" "
+                                    android:id="@+id/btnPayeer"
+                                    android:background="@drawable/toggle_selector"
+                                    android:layout_gravity="center_vertical" />
 
-                    </LinearLayout>
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.5dp"
-                        android:layout_marginRight="@dimen/_24sdp"
-                        android:layout_marginLeft="@dimen/_24sdp"
-                        android:background="@color/graycolor" />
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/_60sdp"
-                        android:orientation="horizontal"
-                        android:weightSum="1">
-                        <LinearLayout
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="0.6"
-                            android:orientation="horizontal">
+                                <com.vynkpay.custom.NormalTextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textSize="@dimen/_15sdp"
+                                    android:textColor="@color/black"
+                                    android:paddingLeft="@dimen/_10sdp"
+                                    android:layout_gravity="center_vertical"
+                                    android:text="Payeer"/>
 
-                            <ToggleButton
-                                android:layout_width="24dp"
-                                android:layout_height="24dp"
-                                android:buttonTint="@color/colorPrimary"
-                                android:textOff=" "
-                                android:textOn=" "
-                                android:id="@+id/btnPayeer"
-                                android:background="@drawable/toggle_selector"
-                                android:layout_gravity="center_vertical" />
 
-                            <com.vynkpay.custom.NormalTextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textSize="@dimen/_15sdp"
-                                android:textColor="@color/black"
-                                android:paddingLeft="@dimen/_10sdp"
-                                android:layout_gravity="center_vertical"
-                                android:text="Payeer"/>
+                            </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.4"
+                                android:gravity="right">
 
+                                <ImageView
+                                    android:layout_width="@dimen/_60sdp"
+                                    android:layout_height="@dimen/_40sdp"
+                                    android:layout_gravity="center_vertical"
+                                    android:layout_marginRight="@dimen/_16sdp"
+                                    android:src="@drawable/payeer"/>
+                            </LinearLayout>
 
                         </LinearLayout>
-                        <LinearLayout
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="0.4"
-                            android:gravity="right">
-
-                            <ImageView
-                                android:layout_width="@dimen/_60sdp"
-                                android:layout_height="@dimen/_40sdp"
-                                android:layout_gravity="center_vertical"
-                                android:layout_marginRight="@dimen/_16sdp"
-                                android:src="@drawable/payeer"/>
-                        </LinearLayout>
-
-                    </LinearLayout>
 
                 </LinearLayout>
 
