--- a/app/src/main/res/layout/wallet_request_item_layout.xml
+++ b/app/src/main/res/layout/wallet_request_item_layout.xml
@@ -39,7 +39,7 @@
                     android:textSize="@dimen/_12sdp"
                     android:id="@+id/dateTV"
                     android:textColor="@color/color_text"
-                    android:text="18 June 2020"/>
+                    />
 
 
             </LinearLayout>
@@ -151,8 +151,7 @@
                     android:textSize="@dimen/_12sdp"
                     android:id="@+id/statusTV"
                     android:textColor="@color/colorGreen"
-                    android:text="Confirmed"/>
-
+                    android:text=""/>
 
             </LinearLayout>
 
@@ -175,6 +174,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/_10sdp"
+                android:visibility="gone"
+                android:id="@+id/bankInfoLinear"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -257,7 +258,6 @@
 
                 </LinearLayout>
 
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -315,6 +315,53 @@
                     </LinearLayout>
 
                 </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/_10sdp"
+                android:id="@+id/addressInfoLinear"
+                android:visibility="gone"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <com.vynkpay.custom.NormalTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/_12sdp"
+                        android:textColor="@color/color_text"
+                        android:text="@string/accountInfo"/>
+                    <Space
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_5sdp"/>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="0.5dp"
+                        android:background="@color/color_text"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:orientation="vertical">
+
+                    <com.vynkpay.custom.NormalTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/_12sdp"
+                        android:id="@+id/bitAddressTV"
+                        android:textColor="@color/graycolor" />
+
+                </LinearLayout>
+
 
             </LinearLayout>
 
