--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -42,4 +42,5 @@
     <color name="green4">#66bb6a</color>
     <color name="white1">#F8F8F8</color>
     <color name="blackish">#404040</color>
+    <color name="blue">#1B52CD</color>
 </resources>
