--- a/app/src/main/res/layout/toolbar_new_layout.xml
+++ b/app/src/main/res/layout/toolbar_new_layout.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:local="http://schemas.android.com/apk/res-auto"
-    xmlns:app="http://schemas.android.com/tools">
+    xmlns:local="http://schemas.android.com/apk/res-auto">
     <androidx.appcompat.widget.Toolbar
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
@@ -36,8 +35,8 @@
             android:layout_centerVertical="true"
             android:id="@+id/notifyIcon"
             android:layout_marginEnd="@dimen/_14sdp"
-            app:tint="@color/white"
-            android:src="@drawable/notificationnew"/>
+            android:src="@drawable/notificationnew"
+            local:tint="@color/white" />
 
     </RelativeLayout>
 
