--- a/app/src/main/res/layout/activity_community.xml
+++ b/app/src/main/res/layout/activity_community.xml
@@ -71,10 +71,9 @@
                                 android:layout_height="match_parent"
                                 android:layout_marginStart="@dimen/_20sdp"
                                 android:gravity="center"
-                                android:text="Direct Refrrals"
+                                android:text="@string/directref"
                                 android:textColor="@color/color_text"
                                 android:textSize="@dimen/_14sdp" />
-
 
                         </LinearLayout>
 
