--- a/app/src/main/res/layout/custom_importantlinks.xml
+++ b/app/src/main/res/layout/custom_importantlinks.xml
@@ -483,54 +483,112 @@
               android:layout_height="wrap_content"
               app:cardUseCompatPadding="true"
               app:cardElevation="@dimen/_2sdp">
-              <LinearLayout
+
+              <FrameLayout
                   android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:id="@+id/linVcash"
-                  android:weightSum="1">
+                  android:layout_height="wrap_content">
 
                   <LinearLayout
-                      android:layout_width="0dp"
+                      android:layout_width="match_parent"
                       android:layout_height="wrap_content"
-                      android:layout_gravity="center_vertical"
-                      android:layout_weight="0.75"
-                      android:orientation="vertical"
-                      android:padding="@dimen/_5sdp">
+                      android:id="@+id/linVcash"
+                      android:weightSum="1">
 
-                      <com.vynkpay.custom.NormalTextView
-                          android:layout_width="match_parent"
+                      <LinearLayout
+                          android:layout_width="0dp"
                           android:layout_height="wrap_content"
-                          android:text="Add VCash"
-                          android:textColor="@color/black"
-                          android:textSize="@dimen/_10sdp" />
+                          android:layout_gravity="center_vertical"
+                          android:layout_weight="0.75"
+                          android:orientation="vertical"
+                          android:padding="@dimen/_5sdp">
 
-                      <com.vynkpay.custom.NormalTextView
-                          android:layout_width="wrap_content"
+                          <com.vynkpay.custom.NormalTextView
+                              android:layout_width="match_parent"
+                              android:layout_height="wrap_content"
+                              android:text="Add VCash"
+                              android:textColor="@color/black"
+                              android:textSize="@dimen/_10sdp" />
+
+                          <com.vynkpay.custom.NormalTextView
+                              android:layout_width="wrap_content"
+                              android:layout_height="wrap_content"
+                              android:background="@color/colorPrimary"
+                              android:padding="@dimen/_2sdp"
+                              android:text="Opt for VCash"
+                              android:id="@+id/tvOptVcash"
+                              android:textColor="@color/white"
+                              android:textSize="@dimen/_6sdp" />
+
+                      </LinearLayout>
+                      <LinearLayout
+                          android:layout_width="0dp"
                           android:layout_height="wrap_content"
-                          android:background="@color/colorPrimary"
-                          android:padding="@dimen/_2sdp"
-                          android:text="Opt for VCash"
-                          android:id="@+id/tvOptVcash"
-                          android:textColor="@color/white"
-                          android:textSize="@dimen/_6sdp" />
+                          android:layout_gravity="center_vertical"
+                          android:layout_weight="0.25"
+                          android:gravity="center"
+                          android:padding="@dimen/_3sdp">
+
+                          <ImageView
+                              android:layout_width="@dimen/_25sdp"
+                              android:layout_height="@dimen/_25sdp"
+                              android:src="@drawable/vcashwall" />
+
+                      </LinearLayout>
 
                   </LinearLayout>
+
                   <LinearLayout
-                      android:layout_width="0dp"
+                      android:layout_width="match_parent"
                       android:layout_height="wrap_content"
-                      android:layout_gravity="center_vertical"
-                      android:layout_weight="0.25"
-                      android:gravity="center"
-                      android:padding="@dimen/_3sdp">
+                      android:id="@+id/vyncTXN2"
+                      android:visibility="gone"
+                      android:weightSum="1">
 
-                      <ImageView
-                          android:layout_width="@dimen/_25sdp"
-                          android:layout_height="@dimen/_25sdp"
-                          android:src="@drawable/vcashwall" />
+                      <LinearLayout
+                          android:layout_width="0dp"
+                          android:layout_height="wrap_content"
+                          android:layout_gravity="center_vertical"
+                          android:layout_weight="0.25"
+                          android:gravity="center">
+
+                          <ImageView
+                              android:layout_width="@dimen/_25sdp"
+                              android:layout_height="@dimen/_25sdp"
+                              android:id="@+id/vyncTokenIcon2" />
+
+                      </LinearLayout>
+
+                      <LinearLayout
+                          android:layout_width="0dp"
+                          android:layout_height="wrap_content"
+                          android:layout_gravity="center_vertical"
+                          android:layout_weight="0.75"
+                          android:gravity="center"
+                          android:orientation="vertical"
+                          android:padding="@dimen/_5sdp">
+
+                          <com.vynkpay.custom.NormalTextView
+                              android:layout_width="match_parent"
+                              android:layout_height="wrap_content"
+                              android:id="@+id/vyncTokenName2"
+                              android:textColor="@color/black"
+                              android:textSize="@dimen/_10sdp" />
+
+                          <com.vynkpay.custom.NormalTextView
+                              android:layout_width="match_parent"
+                              android:layout_height="wrap_content"
+                              android:text=""
+                              android:padding="@dimen/_2sdp"
+                              android:id="@+id/vyncTokenBlnc2"
+                              android:textColor="@color/black"
+                              android:textSize="@dimen/_8sdp" />
+
+                      </LinearLayout>
 
                   </LinearLayout>
 
-              </LinearLayout>
+              </FrameLayout>
+
           </androidx.cardview.widget.CardView>
 
       </LinearLayout>
