--- a/app/src/main/res/layout/transfer_token_layout.xml
+++ b/app/src/main/res/layout/transfer_token_layout.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:textSize="@dimen/_14sdp"
             android:textColor="@color/semi_black"
-            android:text="Transfer Details"/>
+            android:text="VYNC Transfer Details"/>
 
 
         <com.vynkpay.custom.NormalTextView
@@ -27,7 +27,7 @@
             android:gravity="center"
             android:id="@+id/transferToken"
             android:padding="@dimen/_10sdp"
-            android:text="Transfer Tokens:...."/>
+            android:text="To be transferred = ...."/>
 
         <com.vynkpay.custom.NormalTextView
             android:layout_width="match_parent"
@@ -37,7 +37,7 @@
             android:gravity="center_vertical"
             android:paddingStart="@dimen/_10sdp"
             android:paddingEnd="@dimen/_10sdp"
-            android:text="Enter TRX(Tron) Address of the User to Transfer Tokens"/>
+            android:text="Enter your TRX (TRON) address to get the tokens"/>
 
 
         <com.vynkpay.custom.NormalEditText
@@ -70,7 +70,7 @@
             android:layout_marginTop="@dimen/_20sdp"
             android:id="@+id/transferTV"
             android:text="Transfer Tokens"
-            android:background="#1B52CD"/>
+            android:background="@color/colorAccent"/>
 
     </LinearLayout>
 
